# my_uc_analyzer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_setup.py
data/: test_lessons.json
src/: data_models.py  etsi_parser.py  vector_store.py
src/agents/: design_agent.py  design_agent_react.py  feedback_agent.py  graph.py  mcp_tools.py  memory.py  query_agent.py  state.py
src/api/: main.py  models.py  routes.py
src/web/: app.py
tests/: test_models.py
