[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-uc-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11.8",
    "pydantic>=2.12.5",
    "pymongo>=4.15.5",
    "pypdf>=6.4.1",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]