[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-uc-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.64.1",
    "fastapi>=0.125.0",
    "langchain>=1.1.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-graph-retriever[astra]>=0.8.0",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-milvus>=0.3.1",
    "langchain-mongodb>=0.9.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "langsmith>=0.4.59",
    "mcp>=1.24.0",
    "neo4j>=6.0.3",
    "pdfplumber>=0.11.8",
    "pydantic>=2.12.5",
    "pymilvus[milvus-lite]>=2.6.5",
    "pymongo>=4.15.5",
    "pypdf>=6.4.1",
    "python-multipart>=0.0.20",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
    "torchvision>=0.22.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv.sources]
torch = { index = "pytorch-nightly-cu128" }
torchvision = { index = "pytorch-nightly-cu128" }

[[tool.uv.index]]
name = "pytorch-nightly-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true
